version/0.15/_sources/api/ansys/dpf/core/operators/mesh/make_sphere_levelset/InputsMakeSphereLevelset.rst.txt






:class:`InputsMakeSphereLevelset`
=================================


.. py:class:: ansys.dpf.core.operators.mesh.make_sphere_levelset.InputsMakeSphereLevelset(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   make_sphere_levelset operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.make_sphere_levelset()
   >>> my_coordinates = dpf.MeshedRegion()
   >>> op.inputs.coordinates.connect(my_coordinates)
   >>> my_origin = dpf.Field()
   >>> op.inputs.origin.connect(my_origin)
   >>> my_radius = float()
   >>> op.inputs.radius.connect(my_radius)






.. py:currentmodule:: InputsMakeSphereLevelset

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~coordinates`
            - Allows to connect coordinates input to the operator.
          * - :py:attr:`~origin`
            - Allows to connect origin input to the operator.
          * - :py:attr:`~radius`
            - Allows to connect radius input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.mesh.make_sphere_levelset import InputsMakeSphereLevelset

Property detail
---------------

.. py:property:: coordinates
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.meshed_region.MeshedRegion | ansys.dpf.core.field.Field]


   Allows to connect coordinates input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.make_sphere_levelset()
   >>> op.inputs.coordinates.connect(my_coordinates)
   >>> # or
   >>> op.inputs.coordinates(my_coordinates)

.. py:property:: origin
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field]


   Allows to connect origin input to the operator.

   An overall 3d vector that gives a point of the plane.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.make_sphere_levelset()
   >>> op.inputs.origin.connect(my_origin)
   >>> # or
   >>> op.inputs.origin(my_origin)

.. py:property:: radius
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect radius input to the operator.

   Sphere radius.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.make_sphere_levelset()
   >>> op.inputs.radius.connect(my_radius)
   >>> # or
   >>> op.inputs.radius(my_radius)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




